# feluda-versioning-check

./: CHANGELOG.md  README.md  hello.py  pyproject.toml  root_dummy_changes.txt
.github/workflows/: merge-main.yml  op-tests.yml  operator-tests.yml.yml  publish-to-pypi.yml
automate_testing/: 06_operators_different_commit_change.sh  07_feluda_squash_merge.sh  08_feluda_pyproject_different_commit_changes.sh
feluda/: dummy_changes.txt  feluda.py
notebooks/: audio-config.yml  cluster-video-config.yml  config.yml  find-text-config.yml
operators/image_vec_rep_resnet/: dummy_changes.txt  pyproject.toml
operators/vid_vec_rep_clip/: dummy_changes.txt  pyproject.toml
scripts/: find_updated_packages.py  semantic_release_workflow.py
tests/: test_semantic_release_workflow.py
