[project]
name = "feluda"
version = "0.8.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.35.91",
    "dacite>=1.8.1",
    "pydub>=0.25.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "werkzeug>=3.1.3",
    "wget>=3.2",
]

[project.optional-dependencies]
dev = [
    "hatchling>=1.27.0",
    "packaging>=24.2",
    "toml>=0.10.2",
    "tomlkit>=0.13.2",
    "ruff>=0.8.3",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
tag_format = "{name}-{version}"

[tool.uv.workspace]
members = ["operators/image_vec_rep_resnet"]

[tool.hatch.build.targets.wheel]
packages = ["feluda"]

# Automated comment added at: 2025-03-17 16:19:45 UTC

# Automated comment added at: 2025-03-26 13:24:58 UTC

# Automated comment added at: 2025-03-27 15:44:48 UTC

# Automated comment added at: 2025-04-07 11:04:51 UTC

# Automated comment added at: 2025-04-07 11:14:08 UTC

# Automated comment added at: 2025-04-07 11:19:57 UTC

# Automated comment added at: 2025-04-07 12:07:19 UTC
